added new year and home

--- a/style.css
+++ b/style.css
@@ -127,6 +127,14 @@ body{
 .vkatebday {
 	top: 88.2171226831421%;
 }
+.vnewyear {
+	top: 67.82877316857899%;
+}
+
+.vhome {
+	top: 68.62312444836716%;
+}
+
 .tag.end {
 	left: 95%
 }
