--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ body{
 .vtag {
 	position: absolute;
 	overflow: visible;
+    margin-top:-10px;
 	text-align: left;
-    width: 100px;
+    width: 130px;
     font-size: 14px;
 }
 .line {
@@ -43,7 +44,8 @@ body{
 	top: 0px;
 }
 .vleft {
-	right: 65px;
+	right: 80px;
+    text-align: right;
 }
 
 .vright{
