--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body{
     padding-top:50px;
-    background: #41295a;  /* fallback for old browsers */
+    background: #5a3929;  /* fallback for old browsers */
     background-image: url(img/bg2.png);
     background-blend-mode: multiply;
 	height: 100%;
