--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     background: #5a3929;  /* fallback for old browsers */
     background-image: url(img/bg2.png);
     background-blend-mode: multiply;
+	background-repeat: no-repeat;
 	height: 100%;
 	color: aliceblue;
 	will-change: opacity;
@@ -122,6 +123,10 @@ body{
 }
 .vamybday {
 	top: 90.07060900264784%;
+}
+
+.adamjob{
+	top:76.83142100617829%;
 }
 .katebday {
 	left: 88.2171226831421%;
