--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     background-image: url(img/bg2.png);
     background-blend-mode: multiply;
 	background-repeat: no-repeat;
+	background-size: cover;
 	height: 100%;
 	color: aliceblue;
 	will-change: opacity;
