background and name changes

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body{
     padding-top:50px;
     background: #5a3929;  /* fallback for old browsers */
-    background-image: url(img/bg2.png);
+    background-image: url(img/ltu8iz24iby01.png);
     background-blend-mode: multiply;
 	background-repeat: no-repeat;
 	background-size: cover;
