--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ html {
 }
 
 .bar-bg-glow {
-	background-color: #ff6007 !important;
+	background-color: #7207ff !important;
 }
 
 @media (min-width: 992px) {
