--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html{
 body{
     padding-top:50px;
     background: #041933c4;  /* fallback for old browsers */
-    background-image: url(img/iPhone 6-7-8 Plus – 1.png);
+    background-image: url(img/final.png);
     background-blend-mode: multiply;
 	background-repeat: no-repeat;
 	background-size: cover;
