--- a/style.css
+++ b/style.css
@@ -146,6 +146,14 @@ body{
 	top: 67.82877316857899%;
 }
 
+.vamydown {
+	top: 88.74669020300088%;
+}
+
+.veaster{
+	top: 96.954986760812%;
+}
+
 .vhome {
 	top: 68.62312444836716%;
 }
